# PandiaTripleP

./: .gitignore  CMakeLists.txt  CurrentExecutable.txt  README.md  compileAndRun.sh  removeDB.sh  runCmake.sh  runTests.sh  startControl.sh  startPandiaBinaries.sh  startWorkhorse.sh
PandiaControl/: ControlMain.py  config.json  requirements.txt
PandiaControl/core/: __init__.py  auth.py  config.py  fillup_database.py  models.py  system.py  views.py
PandiaControl/core/db/: db.json
PandiaControl/core/static/3rdpartylibs/three.js-master/examples/js/loaders/: ColladaLoader.js
PandiaControl/core/static/3rdpartylibs/three.js-master/examples/jsm/loaders/: ColladaLoader.js
PandiaControl/core/static/CameraModels/: Ensenso_S10.mtl
PandiaControl/core/static/css/: style.css
PandiaControl/core/static/js/: Renderer.js  Sidebar.js  UIBase.js  utils.js
PandiaControl/core/static/js/QualityControl/: QualityControl.js  QualitySidebar.js
PandiaControl/core/static/js/StartPage/: StartPage.js
PandiaControl/core/static/js/VolumeScanner/: Chartutils.js  ThreadUtil.js  VolumeScanner.js  VolumeSidebar.js  VolumeUpdateWorker.js
PandiaControl/core/static/js/help/: settings.js  userAdmin.js
PandiaControl/core/static/js/ocmi/: Sidebar.js
PandiaControl/core/templates/: OCMI.html  QualityControl.html  Startpage.html  UIBase.html  VolumeScanner.html  help.html  login.html
PandiaWorkhorse/: CameraSettings.json  ControlNetworkConfig.json  VolumeConfig.json  WorkhorseMain.py  requirements.txt
PandiaWorkhorse/core/: __init__.py  base.py  config.py  conversions.py  endpoints.py  networkutil.py  quality.py  system.py  threadfunctions.py  utils.py  volume.py
PandiaWorkhorse/functionConfigs/: AddScan.json  IterativeAlignment.json  IterativePCABasedAlignment.json  PerformRefineAlignWithCAD.json  StartScan.json
exe/: Test.cpp
licenses/cpp/: EnsensoSDK  PhotoneoPhoxiControl.rtf  ZividSoftwareLicense.txt  jsoncpp  pybind11
licenses/js/: chartjs  jquery-blockUI  threejs
licenses/js/fontawesome/: README
licenses/python/: SQLAlchemy  flask  nuitka  werkzeug
pchs/: pch.h
setup/: README.md  buildAllExe.sh  buildExe.sh  buildOpen3D.sh  initGit.sh  installAllDevPackages.sh  setupExe.sh  setupOpenCV.sh  setupVirtualEnvs.sh
setup/cameras/: installAllCameras.sh  installEnsenso.sh  installKinect.sh  installPhoxi.sh  installRealsense.sh  installZivid.sh
setup/cameras/udev/: 50-zivid.rules  80-telicamsdk.rules
setup/cameras/zivid/: Cameras.yml
setup/deployment_all/: pandia.desktop  setupAutostart.sh  startPandiaBinaries.sh
setup/deployment_control/: installFreeCAD.sh  startControl.sh
setup/deployment_workhorse/: setupOpenCV.sh  startWorkhorse.sh
setup/initFiles/: requirements_backup.txt
setup/misc/: dp.sh  drp.sh
src/cameras/: CameraWrapper.cpp  CameraWrapper.h  EnsensoCamera.cpp  EnsensoCamera.h  IntelCamera.cpp  IntelCamera.h  KinectCamera.cpp  KinectCamera.h  PhoxiCamera.cpp  PhoxiCamera.h  SickCamera.cpp  SickCamera.h  ZividCamera.cpp  ZividCamera.h
src/cppBindings/: cppBindings.cpp
src/quality/: CalibrationSingleton.cpp  CalibrationSingleton.h  ScanningSingleton.cpp  ScanningSingleton.h  qualityUtil.cpp  qualityUtil.h
src/utils/: 3DFunctions.cpp  3DFunctions.h  Plane.cpp  Plane.h  basicMath.cpp  basicMath.h  cameraFunctions.cpp  cameraFunctions.h  conversions.cpp  conversions.h  fileIO.cpp  fileIO.h  imageFunctions.cpp  imageFunctions.h  jsonUtil.cpp  jsonUtil.h  miscFunctions.cpp  miscFunctions.h  vishelper.cpp  vishelper.h
src/volume/: VolumeSingleton.cpp  VolumeSingleton.h  VolumeThread.cpp  VolumeThread.h
tests/control/: conftest.py  test_control.py
tests/cppFiles/: NonlinearCorrectionTests.cpp
